fix: adjust ci cd

--- a/.github/workflows/cd-infra.yaml
+++ b/.github/workflows/cd-infra.yaml
@@ -21,7 +21,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: infra/terraform/cluster
+        working-directory: terraform/cluster
 
     steps:
       - uses: actions/checkout@v4
@@ -70,7 +70,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: infra/terraform/bootstrap-core
+        working-directory: terraform/bootstrap-core
 
     steps:
       - uses: actions/checkout@v4
@@ -115,7 +115,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: infra/terraform/bootstrap-addons
+        working-directory: terraform/bootstrap-addons
 
     steps:
       - uses: actions/checkout@v4
