--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -25,7 +25,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: infra/terraform/bootstrap-addons
+        working-directory: terraform/bootstrap-addons
 
     steps:
       - uses: actions/checkout@v4
@@ -56,7 +56,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: infra/terraform/bootstrap-core
+        working-directory: terraform/bootstrap-core
 
     steps:
       - uses: actions/checkout@v4
@@ -87,7 +87,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: infra/terraform/cluster
+        working-directory: terraform/cluster
 
     steps:
       - uses: actions/checkout@v4
