--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       confirm:
-        description: 'Digite DESTROY para confirmar a destruição da infraestrutura'
+        description: 'Digite DESTROY para confirmar'
         required: true
         type: string
 
@@ -18,93 +18,61 @@ env:
   CLUSTER_NAME: nextime-cluster
 
 jobs:
+
   destroy-bootstrap-addons:
-    name: Destroy Bootstrap Addons (Secrets, Datadog)
     runs-on: ubuntu-latest
     if: github.event.inputs.confirm == 'DESTROY'
-
     defaults:
       run:
-        working-directory: terraform/bootstrap-addons
-
+        working-directory: modules/bootstrap-addons
     steps:
       - uses: actions/checkout@v4
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
+      - uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.6
-
-      - name: Configure AWS Credentials (OIDC)
-        uses: aws-actions/configure-aws-credentials@v4
+      - uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/github-action-role
           aws-region: ${{ env.AWS_REGION }}
-
-      - name: Terraform Init
-        run: terraform init
-
-      - name: Terraform Destroy - Bootstrap Addons
-        run: terraform destroy -auto-approve -var-file=terraform.tfvars
+      - run: terraform init -upgrade
+      - run: terraform destroy -auto-approve -var-file=terraform.tfvars
 
 
   destroy-bootstrap-core:
-    name: Destroy Bootstrap Core (CRDs, IRSA, Controllers)
     runs-on: ubuntu-latest
     needs: destroy-bootstrap-addons
     if: github.event.inputs.confirm == 'DESTROY'
-
     defaults:
       run:
-        working-directory: terraform/bootstrap-core
-
+        working-directory: modules/bootstrap-core
     steps:
       - uses: actions/checkout@v4
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
+      - uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.6
-
-      - name: Configure AWS Credentials (OIDC)
-        uses: aws-actions/configure-aws-credentials@v4
+      - uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/github-action-role
           aws-region: ${{ env.AWS_REGION }}
-
-      - name: Terraform Init
-        run: terraform init
-
-      - name: Terraform Destroy - Bootstrap Core
-        run: terraform destroy -auto-approve -var-file=terraform.tfvars
+      - run: terraform init -upgrade
+      - run: terraform destroy -auto-approve -var-file=terraform.tfvars
 
 
   destroy-cluster:
-    name: Destroy EKS Cluster
     runs-on: ubuntu-latest
     needs: destroy-bootstrap-core
     if: github.event.inputs.confirm == 'DESTROY'
-
     defaults:
       run:
-        working-directory: terraform/cluster
-
+        working-directory: modules/cluster
     steps:
       - uses: actions/checkout@v4
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
+      - uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.6
-
-      - name: Configure AWS Credentials (OIDC)
-        uses: aws-actions/configure-aws-credentials@v4
+      - uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/github-action-role
           aws-region: ${{ env.AWS_REGION }}
-
-      - name: Terraform Init
-        run: terraform init
-
-      - name: Terraform Destroy - Cluster
-        run: terraform destroy -auto-approve -var-file=terraform.tfvars
+      - run: terraform init -upgrade
+      - run: terraform destroy -auto-approve -var-file=terraform.tfvars
