--- a/.github/workflows/ci-infra.yaml
+++ b/.github/workflows/ci-infra.yaml
@@ -1,4 +1,4 @@
-name: Terraform Plan (Infra Unificada)
+name: Terraform Plan (EKS + Bootstrap)
 
 on:
   pull_request:
@@ -17,42 +17,73 @@ permissions:
 env:
   AWS_REGION: us-east-1
   AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+  CLUSTER_NAME: nextime-cluster
 
 jobs:
-  plan-infra:
-    name: Terraform Plan - Infraestrutura Completa
+
+  plan-cluster:
+    name: Plan - EKS Cluster
     runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        working-directory: modules/cluster
 
     steps:
       - uses: actions/checkout@v4
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
+      - uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.6
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
+      - uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/github-action-role
           aws-region: ${{ env.AWS_REGION }}
+      - run: terraform init -upgrade
+      - run: terraform validate
+      - run: terraform plan -var-file=terraform.tfvars
 
-      - name: Terraform Init
-        run: terraform init
 
-      - name: Terraform Format Check
-        run: terraform fmt -check -recursive || true
+  plan-bootstrap-core:
+    name: Plan - Bootstrap Core
+    runs-on: ubuntu-latest
+    needs: plan-cluster
 
-      - name: Terraform Validate
-        run: terraform validate
+    defaults:
+      run:
+        working-directory: modules/bootstrap-core
 
-      - name: Terraform Plan
-        run: terraform plan -var-file=terraform.tfvars
+    steps:
+      - uses: actions/checkout@v4
+      - uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.6.6
+      - uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/github-action-role
+          aws-region: ${{ env.AWS_REGION }}
+      - run: terraform init -upgrade
+      - run: terraform validate
+      - run: terraform plan -var-file=terraform.tfvars
 
-      - name: Plan Summary
-        run: |
-          echo "✅ Plan executado com sucesso!"
-          echo "📦 Módulos incluídos:"
-          echo "  - module.cluster (EKS)"
-          echo "  - module.bootstrap_core (IRSA + Addons Core)"
-          echo "  - module.bootstrap_addons (Datadog + Secrets)"
+
+  plan-bootstrap-addons:
+    name: Plan - Bootstrap Addons
+    runs-on: ubuntu-latest
+    needs: plan-bootstrap-core
+
+    defaults:
+      run:
+        working-directory: modules/bootstrap-addons
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.6.6
+      - uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/github-action-role
+          aws-region: ${{ env.AWS_REGION }}
+      - run: terraform init -upgrade
+      - run: terraform validate
+      - run: terraform plan -var-file=terraform.tfvars
